:disappointed:Changed text of the description, fixed some bugs on iOS devices, changed google fonts source to cnpmjs.

--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,21 @@ a, a:visited {
     top: 0;
     width: 100%;
     height: 100%;
+    font-size: 24px;
+    animation: jitter 2s ease 0s infinite;
+}
+
+.placeholder {
+    position: relative;
+    height: 200%;
+    width: 100%;
+}
+
+.mask {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
     left: 0;
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 10;
@@ -155,7 +170,7 @@ a, a:visited {
     position: absolute;
     right: 0;
     top: 0;
-    width: 60%;
+    width: 55%;
     height: 100%;
     background-image: url(../static/devices.png);
     background-size: 100% auto;
@@ -195,8 +210,7 @@ a, a:visited {
     font-size: 12px;
 }
 
-
-@media (max-width: 600px) {
+@media (max-width: 760px), (max-height: 760px) {
     .cover {
         position: relative;
     }
@@ -291,6 +305,7 @@ a, a:visited {
         left: 0;
         width: 100%;
         height: 100%;
+        z-index: 9;
         background-color: rgba(255, 255, 255, 0.8)
     }
 
